# ai-lab

./: .env  .gitattributes  .gitignore  .lycheeignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  a.txt  dependencies.md  error_code_config.yml  nb_tests.yaml  noxfile.py  pyproject.toml  requirements-check-links.txt  setup.py
.github/ISSUE_TEMPLATE/: release.md
.github/actions/: prepare_test_env.yml
.github/actions/prepare_poetry_env/: action.yml
.github/actions/prepare_test_env/: action.yml
.github/workflows/: check_ci.yaml  check_documentation_links.yaml  check_hyperlinks.yaml  check_notebook_links.yaml  check_setup_py.yaml  check_version.yaml  ci.yaml  hyperlinks.yaml  notebook_docker_image_builder.yaml  notebook_tests.yaml  release.yml  release_droid_upload_github_release_assets.yml  shellcheck.yaml  test_release.yml
aws-code-build/ci/: buildspec.yaml  buildspec_release.yaml
credential-store/: credential_store.py  sample.py
credential-store/test/: test_secret_store.py
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.2.1.md  changes_0.3.0.md  changes_1.0.0.md  changes_1.1.0.md  changes_2.0.0.md  changes_2.1.0.md  changes_3.0.0.md  changes_3.1.0.md  changes_3.2.0.md  changes_3.2.1.md  changes_3.3.0.md  changes_3.4.0.md  changes_3.5.0.md  changes_4.0.0.md  changes_4.1.0.md  changes_5.0.0.md  changes_5.0.1.md  changes_5.1.0.md  changes_6.0.0.md  unreleased.md
doc/developer_guide/: aws.md  ci.md  commands.md  dependencies.md  design_goals.md  dev-requirements-and-setup.md  developer_guide.md  docker.md  hyperlink-checking.md  notebooks.md  testing.md  updating_packages.md
doc/developer_guide/img/: cloudformation-stacks.drawio  create-vm-overview.drawio  create-vm-release.drawio
doc/tutorials/: access_store_ui.ipynb  sandbox_config.ipynb  sandbox_config_ui.ipynb  setup_db.ipynb
doc/tutorials/cloud/: 00_setup.ipynb  01_import_data.ipynb  requirements.txt
doc/tutorials/data/: data_abalone.ipynb  data_telescope.ipynb
doc/tutorials/sagemaker/: sme_deploy_model.ipynb  sme_init.ipynb  sme_init_ui.ipynb  sme_introduction.ipynb  sme_train_model.ipynb
doc/tutorials/sklearn/: sklearn_predict_abalone.ipynb  sklearn_predict_telescope.ipynb  sklearn_predict_udf.ipynb  sklearn_train_abalone.ipynb  sklearn_train_telescope.ipynb
doc/user_guide/: ami-usage.md  ami_usage.md  editions.md  jupyter.md  login-vm-and-ami.md  system-requirements.md  troubleshooting.md  user-guide.md  user_guide.md  vm-usage.md  vm_usage.md
exasol_script_languages_developer_sandbox/: __init__.py  main.py
exasol_script_languages_developer_sandbox/lib/: asset_id.py  aws_access.py  cf_stack.py  config.py  deployer.py  github_release_access.py  key_file_manager.py  logging.py  random_string_generator.py  render_template.py  run_create_vm.py  run_install_dependencies.py  run_setup_ec2.py  run_setup_ec2_and_install_dependencies.py  vm_slc_bucket.py
exasol_script_languages_developer_sandbox/templates/: additional_release_notes.jinja  ci_code_build.jinja.yaml  ec2_cloudformation.jinja.yaml  release_code_build.jinja.yaml  vm_bucket_cloudformation.jinja.yaml
githooks/: install.sh  update_packaging.sh
javascript-test/: package-lock.json
secret-store/: pyproject.toml  secret_store.py
secret-store/test/: conftest.py  test_secret_store.py
test/: aws_local_stack_access.py  aws_mock_data.py  cloudformation_validation.py  conftest.py  localstack_test.py  matchers.py  mock_cast.py  ports.py  test_ansible.py  test_aws_codebuild_waiter.py  test_ci.py  test_deploy_codebuild.py  test_deploy_ec2.py  test_deploy_vm_bucket.py  test_deploy_vm_bucket_waf.py  test_export_vm.py  test_install_dependencies.py  test_key_file_manager.py  test_make_ami_public.py  test_motd_jupyter_template.py  test_printing.py  test_printing_factories.py  test_release_build.py  test_run_lifecycle_for_ec2.py  test_serialization.py  test_source_ami.py
test/ansible/: ansible_sample_playbook.yml  slc_setup_test.yml
test/aws/: fixtures.py  local_stack_access.py  localstack.py  mock_data.py  templates.py  test_deploy_codebuild.py  test_deploy_ec2.py  test_deploy_vm_bucket.py  test_deploy_vm_bucket_waf.py  test_export_vm.py
test/aws_ci/: test_ci.py  test_ci_s3_transfer_multipart.py
test/ci/: test_ci.py  test_install_dependencies.py
test/codebuild/: test_ci.py  test_ci_create_dss_docker_image.py  test_ci_s3_transfer_multipart.py  test_install_dependencies.py
test/docker/: container.py  dss_docker_image.py  exec_run.py  image.py  in_memory_build_context.py
test/integration/: __init__.py  conftest.py  docker_socket_and_groups.py  docker_utils.py  local_docker_registry.py  localstack_test.py  test_create_dss_docker_image.py  test_entrypoint.py  test_install_dependencies.py  test_motd_jupyter_template.py  test_notebooks.py  test_notebooks_in_dss_docker_image.py  test_push_docker_image.py  test_serialization.py
test/notebook_test_runner/: conftest.py  test_notebooks_in_dss_docker_image.py
test/notebooks/: conftest.py  disabled_nbtest_cloud.py  nbtest_cloud.py  nbtest_environment_test.py  nbtest_first_steps.py  nbtest_gpu.py  nbtest_ibis.py  nbtest_itde.py  nbtest_jupysql.py  nbtest_pyexasol.py  nbtest_sagemaker.py  nbtest_script_languages_container.py  nbtest_sklearn.py  nbtest_text_ai.py  nbtest_transformers.py  nbtest_useful_urls.py  nbtext_jupysql.py  notebook_test_utils.py  pytest.ini  temp_copy_pytest_saas.py  test_dependencies.txt
test/test_container/: Dockerfile
test/unit/: __init__.py  test_ansible.py  test_build_cli.py  test_check_release.py  test_ci_workflow.py  test_cli.py  test_dss_docker_image.py  test_key_file_manager.py  test_make_ami_public.py  test_motd_jupyter_template.py  test_pretty_print.py  test_printing.py  test_printing_factories.py  test_push_progress_reporter.py  test_release_build.py  test_release_notes.py  test_release_workflow.py  test_repo_paths.py  test_run_install_dependencies.py  test_run_lifecycle_for_ec2.py  test_source_ami.py
user_guide/: user_guide.md
vagrant/: Vagrantfile
vagrant/provisioning/: install_poetry.sh
(+447 files in other folders)
