[tool.poetry]
name = "exasol-ai-lab"
version = "2.1.0"
description = "Provide AI-Lab editions."
packages = [ {include = "exasol"}, ]
license = "MIT"
authors = [
    "Torsten Kilias <torsten.kilias@exasol.com>",
    "Mikhail Beck <mikhail.beck@exasol.com>",
    "Christoph Kuhnke <christoph.kuhnke@exasol.com>",
    "Maxim Lapan <maxim.lapan@exasol.com>",
]
classifiers = [
   "Programming Language :: Python :: 3",
   "Development Status :: 3 - Alpha",
   "Framework :: Jupyter :: JupyterLab :: 3",
   "License :: OSI Approved :: MIT License",
]
readme = "README.md"


[tool.poetry.urls]
"Homepage" = "https://github.com/exasol/ai-lab"
"Documentation" = "https://github.io/exasol/ai-lab"
"Source" = "https://github.io/exasol/ai-lab"
"Issues" = "https://github.io/exasol/ai-lab/issues"


[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
click = "^8.1.3"
boto3 = "^1.22.0"
jinja2 = ">=3.1.0"
ansible-runner = "^2.2.1"
ansible = "^10.3.0"
importlib_resources = "^6.4.3"
rich = "^13.7.1"
pandas = "^2.2.2"
# numpy = "^1.26.4" # avoid version >= 2
humanfriendly = "^10.0"
tenacity = "^9.0.0"
pygithub = "^2.2.0"
importlib-metadata = "^8.4.0"

[tool.poetry.group.dev.dependencies]
pytest-check-links = ">=0.10.1,<1.0.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
toml = ">=0.10.2"
pytest = "^8.3.2"
pytest-mock = "^3.7.0"
cfn-lint = "^1.10.3"
gitpython = ">=2.1.0"
localstack = "^3.1.0"
docker = {version = "^7.1.0", markers = "sys_platform != 'win32'"}
fabric = "^3.2.2"
requests = "^2.32.3"


[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]

markers = [
    "cf_lint: marks tests as cf_lint (deselect with '-m \"not cf_lint\"')",
]

filterwarnings = [
    # ignore warnings caused by docker lib
    "ignore:the imp module is deprecated:DeprecationWarning",
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]
